# VlamGuard

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  artifacthub-repo.yml  docker-compose.yml  index.yaml  pyinstaller_entrypoint.py  pyproject.toml  vlamguard-1.0.0.tgz  vlamguard.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml  release.yml  vlamguard-report.yml
.gitlab/issue_templates/: bug_report.md  feature_request.md  security_vulnerability.md
.gitlab/merge_request_templates/: vlamguard_remediation.md
charts/vlamguard/: .helmignore  Chart.yaml  values.yaml
ci/: .gitlab-ci.yml  Jenkinsfile
demo/: run_demo.sh  waivers-example.yaml
docs/: CLI.md  INSTALL.md  README.md
scripts/: test_binary.sh
skills/evals/: evals.json
skills/github-issue/: SKILL.md
skills/gitlab-issue/: SKILL.md
skills/vlamguard-mr/: SKILL.md
skills/vlamguard-pr/: SKILL.md
src/vlamguard/: __init__.py  analyze.py  cli.py  main.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_ai_integration.py  test_cli.py  test_report_e2e.py
tests/fixtures/: best-practice-violations.yaml  clean-deploy.yaml  core-gaps-violations.yaml  crd-argocd-violations.yaml  crd-certmanager-violations.yaml  crd-clean.yaml  crd-eso-violations.yaml  crd-istio-violations.yaml  crd-keda-violations.yaml  evident-risk.yaml  hardened.yaml  security-violations.yaml  subtle-impact.yaml
tests/integration/: test_api.py  test_report_api.py  test_report_cli.py
tests/unit/: test_ai.py  test_ai_context_coverage.py  test_analyze.py  test_argocd_policies.py  test_certmanager_eso_policies.py  test_cli.py  test_cli_coverage.py  test_cli_coverage_ext.py  test_cli_discover.py  test_cli_integration_flags.py  test_discover.py  (+27 more)
vlam-proxy/: .gitignore  README.md  proxy.py  requirements.txt
(+122 files in other folders)
